test/webgl/error/unterminated_cond4.true
File 0, line 3, col 0 - 7:
unterminated conditional "#ifndef"

Fatal: unrecoverable parse error (2)
